<?xml version="1.0"?>
<package format="2">
  <name>ompl_cost_servers</name>
  <version>0.0.1</version>
  <description>A package for ROS cost function servers for OMPL.</description>

  <maintainer email="jgkawell@outlook.com">Jack Kawell</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
